[tool.poetry]
name = "channel-api"
version = "0.1.0"
description = ""
authors = ["Allen Chou <f1470891079@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "channel_api"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
fastapi = "*"
pytz = "*"
requests = "*"
rich = "*"
urllib3 = "*"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
line-bot-sdk = {version = "*", optional = true}

[tool.poetry.extras]
all = ["line-bot-sdk"]
line = ["line-bot-sdk"]

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
