[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["Allen Chou <f1470891079@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_server"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
rich = "*"
pytz = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
