[tool.poetry]
name = "chat-api"
version = "0.3.2"
description = ""
authors = ["Allen Chou <f1470891079@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_api"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
rich = "*"
pytz = "*"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
openai = ">=0.27.0"
urllib3 = "*"
aiopg = "*"
asyncpg = "*"
cryptography = "*"
databases = "*"
ormar = {version = "^0.12.1", extras = ["postgresql"]}
psycopg2-binary = "*"
pyassorted = "*"
sqlalchemy = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
